--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,7 +1,7 @@
 header{
     background-color: #055565;
     width: 100%;
-    height: 80px;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
