completed login and register

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -8,7 +8,7 @@ header{
 
 }
 header a{
-    color: #0c7588;
+    color: #ffffff;
     text-decoration: none;
     margin: 0 15px;
     font-weight: bold;
